fix: scrollbar

--- a/css/_partials/Small.css
+++ b/css/_partials/Small.css
@@ -30,7 +30,10 @@
   }
 
   .scroll {
-    max-height: 300px;
+    max-height: 500px;
+    overflow: hidden;
+  }
+  .scroll:hover {
     overflow: auto;
   }
 
